// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Loading Component Snapshots should match snapshot for default loading 1`] = `
<View
  accessibilityLabel="Loading"
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 20,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#4CAF50"
    size="large"
  />
</View>
`;

exports[`Loading Component Snapshots should match snapshot for full screen loading 1`] = `
<View
  accessibilityLabel="Loading products..."
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#4CAF50"
    size="large"
  />
  <Text
    style={
      {
        "color": "#666666",
        "fontSize": 14,
        "marginTop": 12,
        "textAlign": "center",
      }
    }
  >
    Loading products...
  </Text>
</View>
`;

exports[`Loading Component Snapshots should match snapshot for loading with text 1`] = `
<View
  accessibilityLabel="Loading..."
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 20,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#4CAF50"
    size="large"
  />
  <Text
    style={
      {
        "color": "#666666",
        "fontSize": 14,
        "marginTop": 12,
        "textAlign": "center",
      }
    }
  >
    Loading...
  </Text>
</View>
`;
